Finished mockup of all pages for the app v1.

--- a/css/custom-nonbootstrap.css
+++ b/css/custom-nonbootstrap.css
@@ -6,3 +6,13 @@
     color: #8d8d8d;
     font-style: italic;
 }
+
+.sessionTotals {
+    color: #3366cc;
+    font-weight: bold;
+    background-color: #c1d1ef;
+}
+
+.textWhite {
+    color: #ffffff;
+}
