--- a/html/css/custom-nonbootstrap.css
+++ b/html/css/custom-nonbootstrap.css
@@ -30,6 +30,10 @@ td.padded {
     padding: 10px;
 }
 
+tr.playerStats:nth-child(even) {
+    background-color: #f3f3f3;
+}
+
 span.sessPCs {
     color: #c9c9c9;
     font-size: small;
